2015-10-09 huku <huku@grhack.net>

    * Use sets instead of lists in "sex_loader.py".


2015-09-19 huku <huku@grhack.net>

    * Fixed bug in `dump_pe_coff_exit_points()' and modified it to print thunk
      addresses instead of import name addresses.


2015-09-16 huku <huku@grhack.net>

    * Added helper functions `is_decimal()' and `is_hexadecimal()'.
    * Modified "sex.sh" to append the ".sex" suffix in the directory name that
      will hold the extracted information.
    * Renamed "aux.txt" to "aux.ini"; we use a standard INI format which is
      easily parsable by Python's `ConfigParser' object.
    * Added experimental support for dumping PE-COFF exports, imports,
      relocations and functions. Information is written in "aux.ini".
    * Moved `dump_arch()' in `main()'.
    * Added check for `objdump'; some package managers on MacOS X install
      `objdump' as `gobjdump' instead.
    * Updated "sex_loader.py" to parse "aux.ini".
    * Added method `get_section_for_address_range()' in class `SexLoader' and
      modified `read()' accordingly.
    * Updated "README.md".
    * Updated "NOTES.md"


2015-07-30 huku <huku@grhack.net>

    * Modified "sex.sh" to write the name of the executable's architecture in
      a file named "aux.txt".
    * Fixed problem with Mach-O segments in `dump_otool()'.
    * Modified "sex_loader.py" to make it work on Microsoft Windows.
    * Renamed member `address' of class `SexLoader' to `start_address' and
      added member `end_address'.
    * Modified `SexLoader' constructor to read "aux.txt".


2014-10-31 huku <huku@grhack.net>

    * Added "NOTES.md".


2014-10-21 huku <huku@grhack.net>

    * Added missing `local' directives in "sex.sh" to avoid trashing the global
      namespace (spotted by slasher@grhack.net).
